[project]
name = "comfyui-fluxext-mz"
description = "Nodes:MZ_Flux1PartialLoad_Patch. Tool nodes related to flux1"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/MinusZoneAI/ComfyUI-FluxExt-MZ"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-FluxExt-MZ"
Icon = ""
